src/test/deca/context/valid/liste_instructions.deca
// Description :
// test d'une liste d'instructions
//
// Résultats :
// ok

{
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
  println("Hello, world!");
}
